# bmi-calc

./: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
app/: bmi_calculator.py  main.py
features/: bmi_calculator.feature  environment.py
features/steps/: bmi_calculator.py
scripts/: config.py  start_prod.sh
