[tool.poetry]
name = "happyfresh"
version = "0.1.0"
description = ""
authors = ["adityafarizki <aditya.farizki1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
