[tool.poetry]
name = "happyfresh"
version = "0.1.0"
description = ""
authors = ["adityafarizki <aditya.farizki1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
requests = "^2.26.0"
gunicorn = "^20.1.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
black = "^21.7b0"
expects = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
